<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyTouch5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="textfield">Название комнаты:</string>
    <string name="textip">IP комнаты:</string>
    <string name="textipcam">IP камеры:</string>
    <string name="datefield">Дата:</string>
    <string name="iconfield">Иконка комнаты:</string>
    <string name="entertext">Введите текст</string>
    <string name="enterip">Введите IP комнаты</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="icon">Icon</string>
    <string name="deleteAll">Удалить все комнаты</string>
    <string name="exit">Выход</string>
    <string name="add">Добавить комнату</string>
    <string name="komnata">Комната</string>
    <string name="ip">192.168.1.</string>
    <string name="ipcam">http://192.168.1.170:9070/snapshot.cgi</string>
    <string name="chennel1">Канал 1</string>
    <string name="chennel2">Канал 2</string>
    <string name="chennel3">Канал 3</string>
    <string name="chennel4">Канал 4</string>
    <string name="chennel5">Канал 5</string>
    <string name="rgb">1 RGB</string>
    <string name="w3">3 белых</string>
    <string name="title_activity_test">Test</string>

</resources>
